--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "lodash.debounce": "^4.0.8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
