--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "firebase": "^11.1.0",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "vue": "^3.2.13",
